--- a/UserManagement/UserManagement.csproj
+++ b/UserManagement/UserManagement.csproj
@@ -9,19 +9,22 @@
     <Compile Remove="Migrations\20200302095226_bootcamp.Designer.cs" />
     <Compile Remove="Migrations\20200302095408_bootcamp.cs" />
     <Compile Remove="Migrations\20200302095408_bootcamp.Designer.cs" />
+    <Compile Remove="Migrations\20200306033224_updateModel.cs" />
+    <Compile Remove="Migrations\20200306033224_updateModel.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="Areas\Identity\Services\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.30" />
     <PackageReference Include="Dapper.Contrib" Version="2.0.30" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.4" />
   </ItemGroup>
 
 </Project>
